--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
