--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "isbot": "^3.6.8",
+    "mfrc522-rpi": "^2.1.3",
     "morgan": "^1.10.0",
+    "node-gyp": "^10.0.1",
+    "rc522": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rpi-softspi": "^1.0.5",
+    "rpio": "^2.4.2",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "source-map-support": "^0.5.21"
