--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "rc522": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "request": "^2.88.2",
     "rpi-softspi": "^1.0.5",
     "rpio": "^2.4.2",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.4.0",
